# notes_api

./: Makefile  pyproject.toml
deploy/: project.yaml  storage.yaml
deploy/nginx/: nginx.conf
deploy/nginx/config/: site.conf
src/: main.py  pyproject.toml
src/api/v1/: authentication.py  notes_api.py
src/core/: config.py  env.example  logger.py
src/db/: base_cache.py  cache.py  postgres.py  redis.py
src/models/: note.py  tag.py  user.py
src/repositiries/: base_repository.py  note_repository.py
src/repositories/: base_repository.py  note_repository.py  tag_repository.py  user_repository.py
src/schemas/: note_schema.py  user_schema.py
src/services/: note_service.py  tag_service.py  user_service.py
src/utils/: rate_limit.py
telegram_bot/: config.py  env.example  handlers.py  main.py
