[tool.poetry]
name = "notes-api"
version = "0.1.0"
description = ""
authors = ["Анастасия Искоскина <aiskoskina@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.35"
async-fastapi-jwt-auth = "^0.6.6"
werkzeug = "^3.0.4"
asyncpg = "^0.29.0"
greenlet = "^3.1.0"
redis = "^5.0.8"
status = "^0.2.5"
orjson = "^3.10.7"
aiogram = "^3.13.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
